@@ -1,4 +1,4 @@
-use Test::More tests => 9;
+use Test::More tests => 11;
 use lib 'lib';
 use DPKG::Log;
 
@@ -14,3 +14,6 @@ is(scalar(@{$dpkg_log->{invalid_lines}}), 0, "0 invalid lines" );
 ok($entry = $dpkg_log->next_entry, "next entry returns an entry" );
 isa_ok($entry, "DPKG::Log::Entry", "entry");
 ok( my ($from, $to) = $dpkg_log->get_datetime_info(), "get_datetime_info returns report period info");
+ok( $dpkg_log = DPKG::Log->new(filename => 'test_data/dpkg.log', parse => 1),
+    'initialize DPKG::Log object with parse = 1');
+ok ( eval { $dpkg_log->entries >= 0 } , "object stores entries");
